# web11

./: .env  .example.env  app.db  docker-compose.yml  main.py  models.py  others_config.py  pyproject.toml  readme.md  schemas.py
migrations/: env.py
migrations/versions/: 3f5391134f91_initial.py  ac39f984e38a_initial.py  d24537aa7f31_add_user.py
src/: schemas.py
src/conf/: config.py
src/database/: __init__.py  db.py  models.py
src/repository/: __init__.py  contacts.py  todos.py  users.py
src/routes/: auth.py  contacts.py  todos.py
src/services/: __init__.py  auth.py  email.py
src/services/templates/: email_template.html
tests/: conftest.py  test_auth.py  test_contacts.py  test_repository_contacts.py
