[tool.poetry]
name = "web11"
version = "0.1.0"
description = ""
authors = ["Yevheniy Petrenko <yevheniipetrenko92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.100.1"}
sqlalchemy = "^2.0.19"
alembic = "^1.11.2"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
