[tool.poetry]
name = "web11"
version = "0.1.0"
description = ""
authors = ["Yevheniy Petrenko <yevheniipetrenko92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.100.1"}
sqlalchemy = "^2.0.19"
alembic = "^1.11.2"
asyncpg = "^0.28.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
libgravatar = "^1.0.4"
fastapi-mail = "^1.4.1"
redis = "^5.0.0"
pydantic = {extras = ["dotenv"], version = "^2.4.1"}
pytest = "^7.4.3"
services = "^0.1.1"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
